@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Fixed endianness in OS X mouse cursor graphics
+	  (STR #1348)
 	- Fixed crash on mixed use of keyboard and mouse for
 	  Fl_Menu_Button (STR #1356)
 	- Fixed Fl_Window::visible() and shown() for OS X
